# ParFastAAI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile_flags.txt  main.cpp
data/: README.md  qsub_input.txt  qsub_test_bad_input.txt  qsub_test_input.txt  qsub_test_output_matrix_wheader.csv  subset_db.py  xanthodb_aji_matrix.csv  xanthodb_aji_matrix_wheader.csv  xdb_subset1.db  xdb_subset1_aji_matrix_wheader.csv  xdb_subset2.db  xdb_subset2_aji_matrix_wheader.csv  xdb_subset_combo12.db
doc/: pfaai_algorithm.tex
ext/sqlite/: LICENSE.md  README.md  build.sh  sqlite3.h
include/pfaai/: algorithm_impl.hpp  data.hpp  data_impl.hpp  database.hpp  db_helper.hpp  ds_helper.hpp  ds_impl.hpp  helpers.hpp  impl.hpp  interface.hpp  psort.hpp  qtdata.hpp  runner.hpp  scp_db.hpp  sqltif.hpp  utils.hpp
sqlite-amalgamation-3450100/: sqlite3
src/: main.cpp
tests/: pfaai_tests.cpp  pfaai_tests.hpp  run_tests.sh  test_queries.sql
